{
  "version": 4,
  "terraform_version": "1.3.5",
  "serial": 37,
  "lineage": "37801caa-41dc-b98c-559d-b2a5830e553c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-095dd3176be775f68",
            "associate_with_private_ip": "10.0.1.50",
            "association_id": "eipassoc-0eb9fbeeba1064b60",
            "domain": "vpc",
            "id": "eipalloc-095dd3176be775f68",
            "instance": "i-0f9fd3358b3ddda3b",
            "network_border_group": "us-east-1",
            "network_interface": "eni-02d6282068f63f7b2",
            "private_dns": "ip-10-0-1-50.ec2.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-184-72-244-247.compute-1.amazonaws.com",
            "public_ip": "184.72.244.247",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.ec2",
            "aws_internet_gateway.internet-gateway",
            "aws_network_interface.web-server-nic",
            "aws_security_group.allow_tls",
            "aws_subnet.first_subnet",
            "aws_vpc.first_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b0dcb5067f052a63",
            "arn": "arn:aws:ec2:us-east-1:090486721290:instance/i-0f9fd3358b3ddda3b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f9fd3358b3ddda3b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-02d6282068f63f7b2"
              }
            ],
            "primary_network_interface_id": "eni-02d6282068f63f7b2",
            "private_dns": "ip-10-0-1-50.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.50",
            "public_ip": "184.72.244.247",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02f5c5e9021b3006e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f8878646318b4985",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-041fd9f902f03b066"
            ]
          },
          "dependencies": [
            "aws_network_interface.web-server-nic",
            "aws_security_group.allow_tls",
            "aws_subnet.first_subnet",
            "aws_vpc.first_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:090486721290:internet-gateway/igw-09b544b3495a81fc0",
            "id": "igw-09b544b3495a81fc0",
            "owner_id": "090486721290",
            "tags": {
              "Name": "Production internet gateway"
            },
            "tags_all": {
              "Name": "Production internet gateway"
            },
            "vpc_id": "vpc-03ba567c270769963"
          },
          "dependencies": [
            "aws_vpc.first_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "web-server-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:090486721290:network-interface/eni-02d6282068f63f7b2",
            "attachment": [
              {
                "attachment_id": "eni-attach-08a318e71d0bd9892",
                "device_index": 0,
                "instance": "i-0f9fd3358b3ddda3b"
              }
            ],
            "id": "eni-02d6282068f63f7b2",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0a:c7:b9:48:ab:41",
            "owner_id": "090486721290",
            "private_ip": "10.0.1.50",
            "private_ip_list": [
              "10.0.1.50"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-041fd9f902f03b066"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f8878646318b4985"
          },
          "dependencies": [
            "aws_security_group.allow_tls",
            "aws_subnet.first_subnet",
            "aws_vpc.first_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:090486721290:route-table/rtb-0b96b5afd924c3e4f",
            "id": "rtb-0b96b5afd924c3e4f",
            "owner_id": "090486721290",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09b544b3495a81fc0",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Production-route"
            },
            "tags_all": {
              "Name": "Production-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-03ba567c270769963"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet-gateway",
            "aws_vpc.first_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f2cd811790e356d0",
            "route_table_id": "rtb-0b96b5afd924c3e4f",
            "subnet_id": "subnet-0f8878646318b4985"
          },
          "dependencies": [
            "aws_internet_gateway.internet-gateway",
            "aws_route_table.route_table",
            "aws_subnet.first_subnet",
            "aws_vpc.first_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:090486721290:security-group/sg-041fd9f902f03b066",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-041fd9f902f03b066",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "090486721290",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_web_connections"
            },
            "tags_all": {
              "Name": "allow_web_connections"
            },
            "timeouts": null,
            "vpc_id": "vpc-03ba567c270769963"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.first_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "first_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:090486721290:subnet/subnet-0f8878646318b4985",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f8878646318b4985",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "090486721290",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Production subnet"
            },
            "tags_all": {
              "Name": "Production subnet"
            },
            "vpc_id": "vpc-03ba567c270769963"
          },
          "dependencies": [
            "aws_vpc.first_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "first_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:090486721290:vpc/vpc-03ba567c270769963",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08dd746d91841f43d",
            "default_route_table_id": "rtb-0ef6812dd2aae8f48",
            "default_security_group_id": "sg-0b080354f06bd918c",
            "dhcp_options_id": "dopt-0541f25de148d31d8",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03ba567c270769963",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ef6812dd2aae8f48",
            "owner_id": "090486721290",
            "tags": {
              "Name": "Production vpc"
            },
            "tags_all": {
              "Name": "Production vpc"
            }
          }
        }
      ]
    }
  ]
}